Added some adjustments

--- a/index.html
+++ b/index.html
@@ -251,14 +251,21 @@
             <p class="nav-mobile__text">Kontakt</p>
         </a>
     </nav>
-    <header class="container">
-        <div class="header">
+    <header class="section">
+        <div class="header container">
             <div class="header__box">
                 <a class="header__logo-link" href="./index.html"><img src="./img/budo-instal-transparent-logo.png"
                         alt="Logo firmy Budo Instal" class="header__logo"></a>
                 <nav class="header__nav-desktop-box">
                     <div class="header__nav-desktop">
                         <a class="header__nav-item" href="#">Oferta</a>
+                        <div class="header__drop-down-nav-box">
+                            <a class="header__drop-down-nav-link" href="#">System rur</a>
+                            <a class="header__drop-down-nav-link" href="#">Armatura wodociągowa</a>
+                            <a class="header__drop-down-nav-link" href="#">Kształtki kanalizacyjne</a>
+                            <a class="header__drop-down-nav-link" href="#">Żeliwo drogowe</a>
+                            <a class="header__drop-down-nav-link" href="#">Studnie</a>
+                        </div>
                         <a class="header__nav-item" href="#">O nas</a>
                         <a class="header__nav-item" href="#contact">kontakt</a>
                     </div>
@@ -271,13 +278,6 @@
             </div>
         </div>
     </header>
-    <div class="secondary-desktop-nav">
-        <a class="secondary-desktop-nav" href="#">System rur</a>
-        <a class="secondary-desktop-nav" href="#">Armatura wodociągowa</a>
-        <a class="secondary-desktop-nav" href="#">Kształtki kanalizacyjne</a>
-        <a class="secondary-desktop-nav" href="#">Żeliwo drogowe</a>
-        <a class="secondary-desktop-nav" href="#">Studnie</a>
-    </div>
     <main>
         <section class="container">
             <div class="slider">
@@ -288,7 +288,7 @@
                             kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
-                    <img class="slider__img" src="./img/jason-leung-0gZ1JLxqdus-unsplash.jpg" alt="Slide 1">
+                    <img class="slider__img" src="./img/water-drops_mobile_banner.webp" alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
                     <div class="slider__text-box slider__text-box--slide2">
@@ -307,7 +307,7 @@
                             instalacji oraz modernizacji istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/cristian-palmer-3leBubkp5hk-unsplash.jpg"
+                    <img loading="lazy" class="slider__img" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
                         alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
@@ -337,7 +337,9 @@
         <section class="container">
             <div class="about">
                 <h3 class="headers-titles">Możesz na nas liczyć</h3>
-                <p class="about__description">Możesz polegać na naszym doświadczonym zespole, który zawsze służy fachowym doradztwem. Nasze usługi obejmują kompleksową pomoc w doborze odpowiedniego systemu oraz dostosowaniu go do indywidualnych warunków budowlanych, eksploatacyjnych oraz wymagań prawnych.</p>
+                <p class="about__description">Możesz polegać na naszym doświadczonym zespole, który zawsze służy
+                    fachowym doradztwem. Nasze usługi obejmują kompleksową pomoc w doborze odpowiedniego systemu oraz
+                    dostosowaniu go do indywidualnych warunków budowlanych, eksploatacyjnych oraz wymagań prawnych.</p>
             </div>
         </section>
         <section class="section">
