Secondary drop down nav added to desktop devices + some fixtures

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <meta name="keywords"
         content="materiały wodociągowe, materiały kanalizacyjne, armatura wodociągowa, żeliwo drogowe, hydranty przeciwpożarowe, zasuwy kołnierzowe, włazy kanalizacyjne, rury pvc, rury pp, rury wodiciągowe, rury kanalizacyjne">
     <meta name="author" content="Tomasz Czyżewski">
+
+    <meta property="og:site_name" content="Budo-Instal-2 Sławomir Czyżewski">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji" />
+    <meta property="og:description"
+        content="Zmieniamy przestarzałe wzorce, inspirując świat do akceptacji i miłości samej siebie" />
+    <meta property="og:url" content="https://budoinstal.eu/">
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg" />
+    <meta property="og:image:secure_url"
+        content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Nudyess Models - Agencja modelek Warszawa">
+    <meta name="twitter:description"
+        content="Zmieniamy przestarzałe wzorce, inspirując świat do akceptacji i miłości samej siebie.">
+    <meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg">
+
     <link rel="shortcut icon" type="image/png" href="./img/budo-instal-website-favicon-color.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -258,13 +276,42 @@
                         alt="Logo firmy Budo Instal" class="header__logo"></a>
                 <nav class="header__nav-desktop-box">
                     <div class="header__nav-desktop">
-                        <a class="header__nav-item" href="#">Oferta</a>
+
+                        <a class="header__second-nav-box">
+                            <p class="header__nav-item second-nav">Oferta</p>
+                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2.2em" height="2.2em" viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a" stroke-width="0.00032">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                  <path d="M9,17h6v6a1,1,0,0,0,2,0V17h6a1,1,0,0,0,0-2H17V9a1,1,0,0,0-2,0v6H9a1,1,0,0,0,0,2Z"></path>
+                                </g>
+                              </svg></button>
+
+                        </a>
+
+
+
                         <div class="header__drop-down-nav-box">
                             <a class="header__drop-down-nav-link" href="#">System rur</a>
                             <a class="header__drop-down-nav-link" href="#">Armatura wodociągowa</a>
                             <a class="header__drop-down-nav-link" href="#">Kształtki kanalizacyjne</a>
                             <a class="header__drop-down-nav-link" href="#">Żeliwo drogowe</a>
                             <a class="header__drop-down-nav-link" href="#">Studnie</a>
+                            <button class="header__drop-down-close_arrow">
+                                <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-66 -66 462.00 462.00"
+                                    xml:space="preserve" stroke="#1f2d5a" stroke-width="0.0033"
+                                    transform="rotate(0)matrix(1, 0, 0, 1, 0, 0)">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke="#CCCCCC" stroke-width="0.66"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <path id="XMLID_7_"
+                                            d="M288.107,116.894c-5.858-5.858-15.355-5.858-21.213,0c-5.858,5.858-5.858,15.355,0,21.213L278.787,150H15 c-8.284,0-15,6.716-15,15c0,8.284,6.716,15,15,15h263.787l-11.894,11.893c-5.858,5.858-5.858,15.355,0,21.213 c2.929,2.929,6.768,4.394,10.606,4.394c3.839,0,7.678-1.464,10.607-4.394l37.5-37.5c5.858-5.858,5.858-15.355,0-21.213 L288.107,116.894z">
+                                        </path>
+                                    </g>
+                                </svg>
+                            </button>
                         </div>
                         <a class="header__nav-item" href="#">O nas</a>
                         <a class="header__nav-item" href="#contact">kontakt</a>
@@ -297,8 +344,7 @@
                             deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/jason-leung-nOz9mDukDF8-unsplash.jpg"
-                        alt="Slide 2">
+                    <img loading="lazy" class="slider__img" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
@@ -327,8 +373,7 @@
                             wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/linda-xu-UGQpaq08Igw-unsplash.webp"
-                        alt="Slide 4">
+                    <img loading="lazy" class="slider__img" src="./img/two-track-road.webp" alt="Slide 4">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
