Added some adjustemnts to large devices in CSS

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <div class="header__nav-desktop">
                         <a class="header__second-nav-box">
                             <p class="header__nav-item header__nav-item--p">Oferta</p>
-                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2.2em" height="2.2em" viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a" stroke-width="0.00032">
+                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2em" height="2em" viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a" stroke-width="0.00032">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                                 <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                                 <g id="SVGRepo_iconCarrier">
@@ -315,7 +315,7 @@
                             kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
-                    <img class="slider__img" src="./img/water-drops_mobile_banner.webp" alt="Slide 1">
+                    <img class="slider__img slider__img--mobile" src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp" alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
                     <div class="slider__text-box slider__text-box--slide2">
@@ -353,7 +353,7 @@
                             wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/two-track-road.webp" alt="Slide 4">
+                    <img loading="lazy" class="slider__img" src="./img/two-track-road.webp" alt="Slide 5">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
