Optimization - adjusted the main slider to ability to add mobile/desktop photos

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <meta property="og:site_name" content="Budo-Instal-2 Sławomir Czyżewski">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji" />
-    <meta property="og:description"
-        content="Zmieniamy przestarzałe wzorce, inspirując świat do akceptacji i miłości samej siebie" />
+    <meta property="og:description" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji" />
     <meta property="og:url" content="https://budoinstal.eu/">
     <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg" />
     <meta property="og:image:secure_url"
@@ -25,9 +24,8 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Nudyess Models - Agencja modelek Warszawa">
-    <meta name="twitter:description"
-        content="Zmieniamy przestarzałe wzorce, inspirując świat do akceptacji i miłości samej siebie.">
+    <meta name="twitter:title" content="Budo-Instal-2 Sławomir Czyżewski">
+    <meta name="twitter:description" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji.">
     <meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg">
 
     <link rel="shortcut icon" type="image/png" href="./img/budo-instal-website-favicon-color.png" />
@@ -278,13 +276,17 @@
                     <div class="header__nav-desktop">
                         <a class="header__second-nav-box">
                             <p class="header__nav-item header__nav-item--p">Oferta</p>
-                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2em" height="2em" viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a" stroke-width="0.00032">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                  <path d="M9,17h6v6a1,1,0,0,0,2,0V17h6a1,1,0,0,0,0-2H17V9a1,1,0,0,0-2,0v6H9a1,1,0,0,0,0,2Z"></path>
-                                </g>
-                              </svg></button>
+                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2em" height="2em"
+                                    viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
+                                    stroke-width="0.00032">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <path
+                                            d="M9,17h6v6a1,1,0,0,0,2,0V17h6a1,1,0,0,0,0-2H17V9a1,1,0,0,0-2,0v6H9a1,1,0,0,0,0,2Z">
+                                        </path>
+                                    </g>
+                                </svg></button>
                         </a>
                         <div class="header__drop-down-nav-box">
                             <a class="header__drop-down-nav-link" href="#">System rur</a>
@@ -315,7 +317,12 @@
                             kanalizacji.</p>
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp" alt="Slide 1">
+                    <img class="slider__img slider__img--mobile"
+                        src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp"
+                        alt="Slide 1">
+                    <img class="slider__img slider__img--desktop"
+                        src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp"
+                        alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
                     <div class="slider__text-box slider__text-box--slide2">
@@ -324,7 +331,8 @@
                             deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
+                    <img class="slider__img slider__img--mobile" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
+                    <img class="slider__img slider__img--desktop" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
@@ -333,7 +341,9 @@
                             instalacji oraz modernizacji istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
+                    <img class="slider__img slider__img--mobile" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
+                        alt="Slide 3">
+                    <img class="slider__img slider__img--desktop" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
                         alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
@@ -343,7 +353,9 @@
                             kanalizacyjnej.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
+                    <img class="slider__img slider__img--mobile" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
+                        alt="Slide 4">
+                    <img class="slider__img slider__img--desktop" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
                         alt="Slide 4">
                 </div>
                 <div class="slider__slide-box" id="slide5">
@@ -353,7 +365,8 @@
                             wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img loading="lazy" class="slider__img" src="./img/two-track-road.webp" alt="Slide 5">
+                    <img class="slider__img slider__img--mobile" src="./img/two-track-road.webp" alt="Slide 5">
+                    <img class="slider__img slider__img--desktop" src="./img/two-track-road.webp" alt="Slide 5">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
