Added new banners to the main slider

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                             deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
-                    <img class="slider__img slider__img--desktop" src="./img/rury-pp-karbowane.webp" alt="Slide 2">
+                    <img class="slider__img slider__img--mobile" src="./img/system-rur-mobile.jpg" alt="Slide 2">
+                    <img class="slider__img slider__img--desktop" src="./img/system-rur-desktop.jpg" alt="Slide 2">
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
@@ -341,9 +341,9 @@
                             instalacji oraz modernizacji istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
+                    <img class="slider__img slider__img--mobile" src="./img/kształtki-wodociągowe-mobile.jpg"
                         alt="Slide 3">
-                    <img class="slider__img slider__img--desktop" src="./img/Zrzut ekranu 2024-05-16 o 23.10.21.jpg"
+                    <img class="slider__img slider__img--desktop" src="./img/kształtki-wodociągowe-desktop.jpg"
                         alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
@@ -353,9 +353,9 @@
                             kanalizacyjnej.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
+                    <img class="slider__img slider__img--mobile" src="./img/kształtki-kanalizacyjne-mobile.jpg"
                         alt="Slide 4">
-                    <img class="slider__img slider__img--desktop" src="./img/conor-sexton-hRemch0ZDwI-unsplash.jpg"
+                    <img class="slider__img slider__img--desktop" src="./img/kształtki-kanalizacyjne-desktop.jpg"
                         alt="Slide 4">
                 </div>
                 <div class="slider__slide-box" id="slide5">
@@ -386,7 +386,7 @@
                     <h3 class="headers-titles">Poznaj naszych partnerów biznesowych</h3>
                     <p class="brand-slider__description">Współpracujemy wyłącznie z renomowanymi producentami, których
                         produkty cechuje niezawodność oraz wytrzymałość. Oferowane przez nas produkty spełniają
-                        najnowsze normy bezpieczeństwa. Dołącz do grona zadowolonych klientów.</p>
+                        najnowsze normy bezpieczeństwa i jakościowe. Dołącz do grona zadowolonych klientów.</p>
                     <div class="brand-slider__box">
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/bohamet-logo.png"
                                 alt="Logo producenta Bohamet"></div>
@@ -394,6 +394,8 @@
                                 alt="Logo producenta Pipe Life"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/lmb-logo.svg"
                                 alt="Logo producenta Lefek Miler Banasik"></div>
+                        <div class="brand-slider__brand"><img class="brand-slider__logo"
+                                src="./icons/trans-quadro-logo.svg" alt="Logo producenta Trans Quadro"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/norson-logo.png"
                                 alt="Logo producenta Norson"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
