--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         produkty cechuje niezawodność oraz wytrzymałość. Oferowane przez nas produkty spełniają
                         najnowsze normy bezpieczeństwa i jakościowe. Dołącz do grona zadowolonych klientów.</p>
                     <div class="brand-slider__box">
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/bohamet-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/bohamet-logo.svg"
                                 alt="Logo producenta Bohamet"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/pipelife-logo.svg"
                                 alt="Logo producenta Pipe Life"></div>
@@ -396,25 +396,27 @@
                                 alt="Logo producenta Lefek Miler Banasik"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
                                 src="./icons/trans-quadro-logo.svg" alt="Logo producenta Trans Quadro"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/norson-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/norson-logo.svg"
                                 alt="Logo producenta Norson"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
                                 src="./icons/instalplast-logo.svg" alt="Logo producenta Instalplast Łask"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/meier-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/meier-logo.svg"
                                 alt="Logo producenta Meier Stąporków"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/domex-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/domex-logo.svg"
                                 alt="Logo producenta Domex"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/zinplast-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/zinplast-logo.svg"
                                 alt="Logo producenta Zinplast Wolbrom"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/plastimex_logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/plastimex_logo.svg"
                                 alt="Logo producenta Plastimex Psary"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/fansuld-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/fansuld-logo.png"
                                 alt="Logo producenta Fansuld Końskie"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
                                 src="./icons/profil-pila-logo.svg" alt="Logo producenta Profil Piła"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/Aeon-logo.jpeg"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/Aeon-logo.svg"
                                 alt="Logo producenta Aeon Szamotuły"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./img/bohamet-logo.png"
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/elplastplus-logo.png"
+                                alt="Logo producenta Elplast Plus"></div>
+                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/bohamet-logo.svg"
                                 alt="Logo producenta Bohamet"></div>
                     </div>
                     <div class="brand-slider__btn-box">
