Replaced png to svg format of favicon and logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:site_name" content="Budo-Instal-2 Sławomir Czyżewski">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji" />
+    <meta property="og:title" content="Budo-Instal-2 Sławomir Czyżewski" />
     <meta property="og:description" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji" />
     <meta property="og:url" content="https://budoinstal.eu/">
     <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg" />
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="Sprzedaż hurtowa materiałów do budowy wodociągu i kanalizacji.">
     <meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0561/7215/0807/files/socialshering.jpg">
 
-    <link rel="shortcut icon" type="image/png" href="./img/budo-instal-website-favicon-color.png" />
+    <link rel="shortcut icon" type="image/svg" href="./icons/budo-instal-favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap" rel="stylesheet">
@@ -270,7 +270,7 @@
     <header class="section">
         <div class="header container">
             <div class="header__box">
-                <a class="header__logo-link" href="./index.html"><img src="./img/budo-instal-transparent-logo.png"
+                <a class="header__logo-link" href="./index.html"><img src="./icons/budo-instal-logo.svg"
                         alt="Logo firmy Budo Instal" class="header__logo"></a>
                 <nav class="header__nav-desktop-box">
                     <div class="header__nav-desktop">
