Changed some css styles in contact from and removed subscribtion checkbox

--- a/index.html
+++ b/index.html
@@ -736,10 +736,6 @@
                                 </div>
                                 <button class="contact-btn" type="submit" name="contact-submit">Wyślij
                                     wiadomość</button>
-                                <div class="newsletter-container">
-                                    <input type="checkbox" name="subscription" value="Newsletter">
-                                    <p class="subscription">Zapisz się na nasz newsletter</p>
-                                </div>
                             </form>
                         </div>
                     </div>
@@ -755,7 +751,7 @@
     <footer>
         <div class="footer-container section">
             <div class="legal-rules">
-                <a href="./index.html"><img src="./img/budo-instal-transparent-logo.png" alt="Logo firmy Budo Instal"
+                <a href="./index.html"><img src="./icons/budo-instal-logo.svg" alt="Logo firmy Budo Instal"
                         class="footer-logo"></a>
                 <div class="legal-links">
                     <a class="legal-link" href="#">Polityka plików cookies</a>
