Added forwarding on mobile devices to contact form from the mobile menu

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
             <p class="nav-mobile__text">O nas</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" href="#contact" id="forwardToContact">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" viewBox="-6.4 -6.4 76.80 76.80" version="1.1" xml:space="preserve"
                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" stroke="#1f2d5a"
