Added Google Analytics tag to the head section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TN8083TKKM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TN8083TKKM');
+    </script>
     <script src="https://kit.fontawesome.com/6f551a8353.js" crossorigin="anonymous"></script>
     <link href="./css/hamburgers.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css" rel="stylesheet">
@@ -406,16 +415,16 @@
                                 alt="Logo producenta Domex"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/zinplast-logo.svg"
                                 alt="Logo producenta Zinplast Wolbrom"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/plastimex_logo.svg"
-                                alt="Logo producenta Plastimex Psary"></div>
+                        <div class="brand-slider__brand"><img class="brand-slider__logo"
+                                src="./icons/plastimex_logo.svg" alt="Logo producenta Plastimex Psary"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/fansuld-logo.png"
                                 alt="Logo producenta Fansuld Końskie"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo"
                                 src="./icons/profil-pila-logo.svg" alt="Logo producenta Profil Piła"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/Aeon-logo.svg"
                                 alt="Logo producenta Aeon Szamotuły"></div>
-                        <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/elplastplus-logo.png"
-                                alt="Logo producenta Elplast Plus"></div>
+                        <div class="brand-slider__brand"><img class="brand-slider__logo"
+                                src="./icons/elplastplus-logo.png" alt="Logo producenta Elplast Plus"></div>
                         <div class="brand-slider__brand"><img class="brand-slider__logo" src="./icons/bohamet-logo.svg"
                                 alt="Logo producenta Bohamet"></div>
                     </div>
