changed the main banner of slider and added php file

--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
                     <img class="slider__img slider__img--mobile"
-                        src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp"
-                        alt="Slide 1">
+                        src="./img/daniele-levis-pelusi-QHSuZvRUZXY-unsplash-mobile.webp"
+                        alt="Wzburzona woda z pęcherzykami powietrza">
                     <img class="slider__img slider__img--desktop"
-                        src="./img/mobile-hurtownia-sprzedaz-materialow-do-budowy-systemu-wodociagowego.webp"
+                        src="./img/daniele-levis-pelusi-QHSuZvRUZXY-unsplash-desktop.webp"
                         alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
@@ -722,7 +722,7 @@
                         </div>
                         <div class="form-container">
                             <h3>Prześlij do nas zapytanie:</h3>
-                            <form action="#" method="POST" class="contact-form">
+                            <form action="send_mail.php" method="POST" class="contact-form">
                                 <div class="contact-box">
                                     <input type="text" id="contact-name" class="contact-input" name="contact-first-name"
                                         placeholder="Imię" focus required="">
@@ -737,7 +737,7 @@
                                 </div>
                                 <div class="contact-box">
                                     <input type="tel" id="contact-phone" class="contact-input" name="contact-phone"
-                                        placeholder="Numer telefonu">
+                                        placeholder="Numer telefonu" required="">
                                 </div>
                                 <div class="contact-box">
                                     <textarea name="contact-msg" class="contact-textarea" id="contact-msg" cols="30"
